--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
-    "@chakra-ui/react": "^2.5.3",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^0.12.4",
     "ethers": "^5.0.0",
-    "framer-motion": "^10.9.1",
+    "framer-motion": "^10.16.4",
     "next": "^12.1.6",
     "next-seo": "^5.15.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.8.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.11.0",
     "siwe": "^1.1.6",
     "use-debounce": "^9.0.3",
     "wagmi": "^0.12.0"
